--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main # Deploy only when code is pushed to the main branch
+    paths:
+      - backend/**
 
 jobs:
   build-and-deploy:
